Update BioimageIoTools to handle 0.5 models (#1744)