@@ -27,6 +27,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Objects;
@@ -36,18 +37,12 @@ import java.util.stream.IntStream;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.Binarize;
-import qupath.bioimageio.spec.BioimageIoSpec.BioimageIoModel;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.Clip;
-import qupath.bioimageio.spec.BioimageIoSpec.InputTensor;
-import qupath.bioimageio.spec.BioimageIoSpec.OutputTensor;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing;
-import qupath.bioimageio.spec.BioimageIoSpec.WeightsEntry;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.ScaleLinear;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.ScaleMeanVariance;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.ScaleRange;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.Sigmoid;
-import qupath.bioimageio.spec.BioimageIoSpec.Processing.ZeroMeanUnitVariance;
+import qupath.bioimageio.spec.Model;
+import qupath.bioimageio.spec.Weights;
+import qupath.bioimageio.spec.tensor.InputTensor;
+import qupath.bioimageio.spec.tensor.OutputTensor;
+import qupath.bioimageio.spec.tensor.Processing;
+import qupath.bioimageio.spec.tensor.axes.Axis;
 import qupath.lib.common.GeneralTools;
 import qupath.lib.images.servers.ImageServerMetadata.ChannelType;
 import qupath.lib.images.servers.PixelType;
@@ -59,6 +54,8 @@ import qupath.opencv.dnn.DnnModels;
 import qupath.opencv.dnn.DnnShape;
 import qupath.opencv.ops.ImageOp;
 import qupath.opencv.ops.ImageOps;
+
+import static qupath.bioimageio.spec.tensor.axes.Axes.getAxesString;
 
 /**
  * Helper class for working with Bioimage Model Zoo model specs, and attempting to 
@@ -85,10 +82,10 @@ public class BioimageIoTools {
 	 * <p>
 	 * In some instances, the processing steps requires by the spec might not currently be 
 	 * supported by QuPath - see {@link #transformToOp(Processing)} for more information.
-	 * @param spec
-	 * @return
+	 * @param spec The model spec
+	 * @return A (hopefully closely) corresponding model
 	 */
-	public static DnnModel buildDnnModel(BioimageIoModel spec) {
+	public static DnnModel buildDnnModel(Model spec) {
 		// Try to find compatible weights
 		DnnModel dnn = null;
 		
@@ -97,12 +94,12 @@ public class BioimageIoTools {
 		// Deep Java Library, although *conceivably* we could have some extension 
 		// that supports weights beyond what DJL currently handles
 		for (var key : Arrays.asList(
-				WeightsEntry.TORCHSCRIPT, // Should work on all platforms
-				WeightsEntry.TENSORFLOW_SAVED_MODEL_BUNDLE, // Should work on most platforms (not Apple Silicon)
-				WeightsEntry.ONNX, // Should work... if installed (usually isn't)
-				WeightsEntry.TENSORFLOW_JS, // Probably won't work
-				WeightsEntry.PYTORCH_STATE_DICT,
-				WeightsEntry.KERAS_HDF5)) {
+				Weights.WeightsEntry.TORCHSCRIPT, // Should work on all platforms
+				Weights.WeightsEntry.TENSORFLOW_SAVED_MODEL_BUNDLE, // Should work on most platforms (not Apple Silicon)
+				Weights.WeightsEntry.ONNX, // Should work... if installed (usually isn't)
+				Weights.WeightsEntry.TENSORFLOW_JS, // Probably won't work
+				Weights.WeightsEntry.PYTORCH_STATE_DICT,
+				Weights.WeightsEntry.KERAS_HDF5)) {
 			try {
 				var weights = spec.getWeights(key);
 				if (weights == null)
@@ -155,7 +152,7 @@ public class BioimageIoTools {
 					// *Conceivably* we could support these via some as-yet-unwritten extension... but we probably don't
 					break;
 				}
-				String axes = spec.getInputs().get(0).getAxes();
+				String axes = getAxesString(spec.getInputs().getFirst().getAxes());
 				var inputShapeMap = spec.getInputs().stream().collect(Collectors.toMap(i -> i.getName(), i -> getShape(i)));
 				var inputShape = inputShapeMap.size() == 1 ? inputShapeMap.values().iterator().next() : null; // Need a single input, otherwise can't be used for output
 				var outputShapeMap = spec.getOutputs().stream().collect(Collectors.toMap(o -> o.getName(), o -> getShape(o, inputShape)));
@@ -210,9 +207,9 @@ public class BioimageIoTools {
 	 * be modified and updated according to user requirements.
 	 * @param model the model spec to initialize the parameters
 	 * @param inputOps optional additional preprocessing ops to apply, before any in the model spec are added
-	 * @return
+	 * @return a parameters object
 	 */
-	public static PatchClassifierParams buildPatchClassifierParams(BioimageIoModel model, ImageOp... inputOps) {
+	public static PatchClassifierParams buildPatchClassifierParams(Model model, ImageOp... inputOps) {
 		return buildPatchClassifierParams(model, -1, -1, inputOps);
 	}
 	
@@ -224,9 +221,9 @@ public class BioimageIoTools {
 	 * @param preferredTileWidth preferred tile width, or -1 to automatically determine this; the width will be updated based on the spec
 	 * @param preferredTileHeight preferred tile height, or -1 to automatically determine this; the height will be updated based on the spec
 	 * @param inputOps optional additional preprocessing ops to apply, before any in the model spec are added
-	 * @return
+	 * @return a parameters object
 	 */
-	public static PatchClassifierParams buildPatchClassifierParams(BioimageIoModel modelSpec, int preferredTileWidth, int preferredTileHeight, ImageOp...inputOps) {
+	public static PatchClassifierParams buildPatchClassifierParams(Model modelSpec, int preferredTileWidth, int preferredTileHeight, ImageOp...inputOps) {
 
 		var inputs = modelSpec.getInputs();
 		if (inputs.size() != 1)
@@ -236,11 +233,11 @@ public class BioimageIoTools {
 		if (outputs.size() != 1)
 			throw new UnsupportedOperationException("Only single outputs currently supported! Model requires " + outputs.size());
 
-		var input = inputs.get(0);
-		var output = outputs.get(0);
+		var input = inputs.getFirst();
+		var output = outputs.getFirst();
 		
 		// Get dimensions and padding
-		var axes = input.getAxes();
+		String axes = getAxesString(input.getAxes());
 		int indChannels = axes.indexOf("c");
 		int indX = axes.indexOf("x");
 		int indY = axes.indexOf("y");
@@ -273,7 +270,7 @@ public class BioimageIoTools {
 				outputShape[i] = (int)Math.round(inputShape[i] * outputShapeScale[i] + outputShapeOffset[i]);
 			}
 		}
-		int nChannelsOut = (int)outputShape[indChannels];
+		int nChannelsOut = outputShape[indChannels];
 
 		// Determine padding
 		// TODO: Consider halo for input?!
@@ -285,9 +282,7 @@ public class BioimageIoTools {
 		}
 		
 		List<ImageOp> preprocessing = new ArrayList<>();
-		for (var op : inputOps) {
-			preprocessing.add(op);
-		}
+        Collections.addAll(preprocessing, inputOps);
 		preprocessing.add(ImageOps.Core.ensureType(PixelType.FLOAT32)); // Expected by bioimage.io
 		if (input.getPreprocessing() != null) {
 			for (var transform : input.getPreprocessing()) {
@@ -354,8 +349,8 @@ public class BioimageIoTools {
 	 * This method will make an attempt to return a suitable op, but it may 
 	 * not be able to incorporate all steps.
 	 * 
-	 * @param transforms
-	 * @return
+	 * @param transforms The transformations in bioimageio model format
+	 * @return Corresponding image operations.
 	 */
 	public static ImageOp transformsToOp(Collection<? extends Processing> transforms) {
 		List<ImageOp> ops = new ArrayList<>();
@@ -365,7 +360,7 @@ public class BioimageIoTools {
 			if (op != null)
 				ops.add(op);
 		}
-		return ops.size() == 1 ? ops.get(0) : ImageOps.Core.sequential(ops);
+		return ops.size() == 1 ? ops.getFirst() : ImageOps.Core.sequential(ops);
 	}
 	
 	
@@ -381,44 +376,39 @@ public class BioimageIoTools {
 	 * <p>
 	 * This method will make an attempt to return a suitable op, but may 
 	 * return null if no such op is available.
-	 * 
-	 * @param transform
-	 * @return
+	 *
+	 * @param transform The transformation in bioimageio model format
+	 * @return a corresponding image operation.
 	 */
 	public static ImageOp transformToOp(Processing transform) {
 		
-		if (transform instanceof Binarize) {
-			var binarize = (Binarize)transform;
-			return ImageOps.Threshold.threshold(binarize.getThreshold());
+		if (transform instanceof Processing.Binarize binarize) {
+            return ImageOps.Threshold.threshold(binarize.getThreshold());
 		}
 		
-		if (transform instanceof Clip) {
-			var clip = (Clip)transform;
-			return ImageOps.Core.clip(clip.getMin(), clip.getMax());
+		if (transform instanceof Processing.Clip clip) {
+            return ImageOps.Core.clip(clip.getMin(), clip.getMax());
 		}
 		
-		if (transform instanceof ScaleLinear) {
-			var scale = (ScaleLinear)transform;
-			// TODO: Consider axes
+		if (transform instanceof Processing.ScaleLinear scale) {
+            // TODO: Consider axes
 			return ImageOps.Core.sequential(
 					ImageOps.Core.multiply(scale.getGain()),
 					ImageOps.Core.add(scale.getOffset())					
 					);
 		}
 
-		if (transform instanceof ScaleMeanVariance) {
+		if (transform instanceof Processing.ScaleMeanVariance scale) {
 			// TODO: Figure out if possible to somehow support ScaleMeanVariance
-			var scale = (ScaleMeanVariance)transform;
-			logger.warn("Unsupported transform {} - cannot access reference tensor {}", transform, scale.getReferenceTensor());
+            logger.warn("Unsupported transform {} - cannot access reference tensor {}", transform, scale.getReferenceTensor());
 			return null;
 //			var mode = warnIfUnsupportedMode(transform.getName(), scale.getMode(), List.of(ProcessingMode.PER_SAMPLE));
 		}
 
-		if (transform instanceof ScaleRange) {
-			var scale = (ScaleRange)transform;
-			var mode = warnIfUnsupportedMode(transform.getName(), scale.getMode(), List.of(Processing.ProcessingMode.PER_SAMPLE));
+		if (transform instanceof Processing.ScaleRange scale) {
+            var mode = warnIfUnsupportedMode(transform.getName(), scale.getMode(), List.of(Processing.ProcessingMode.PER_SAMPLE));
 			assert mode == Processing.ProcessingMode.PER_SAMPLE; // TODO: Consider how to support per dataset
-			var axes = scale.getAxes();
+			String axes = getAxesString(scale.getAxes());
 			boolean perChannel = false;
 			if (axes != null)
 				perChannel = !axes.contains("c");
@@ -427,15 +417,14 @@ public class BioimageIoTools {
 			return ImageOps.Normalize.percentile(scale.getMinPercentile(), scale.getMaxPercentile(), perChannel, scale.getEps());
 		}
 
-		if (transform instanceof Sigmoid) {
+		if (transform instanceof Processing.Sigmoid) {
 			return ImageOps.Normalize.sigmoid();
 		}
 		
-		if (transform instanceof ZeroMeanUnitVariance) {
-			var zeroMeanUnitVariance = (ZeroMeanUnitVariance)transform;
-			var mode = warnIfUnsupportedMode(transform.getName(), zeroMeanUnitVariance.getMode(), List.of(Processing.ProcessingMode.PER_SAMPLE, Processing.ProcessingMode.FIXED));
+		if (transform instanceof Processing.ZeroMeanUnitVariance zeroMeanUnitVariance) {
+            var mode = warnIfUnsupportedMode(transform.getName(), zeroMeanUnitVariance.getMode(), List.of(Processing.ProcessingMode.PER_SAMPLE, Processing.ProcessingMode.FIXED));
 			if (mode == Processing.ProcessingMode.PER_SAMPLE) {
-				var axes = zeroMeanUnitVariance.getAxes();
+				String axes = getAxesString(zeroMeanUnitVariance.getAxes());
 				boolean perChannel = false;
 				if (axes != null) {
 					perChannel = !axes.contains("c");
@@ -480,8 +469,8 @@ public class BioimageIoTools {
 	
 	private static Processing.ProcessingMode warnIfUnsupportedMode(String transformName, Processing.ProcessingMode mode, List<Processing.ProcessingMode> allowed) {
 		if (mode == null || mode == Processing.ProcessingMode.PER_DATASET) {
-			logger.warn("Unsupported mode {} for {}, will be switched to {}", mode, transformName, allowed.get(0));
-			return allowed.get(0);
+			logger.warn("Unsupported mode {} for {}, will be switched to {}", mode, transformName, allowed.getFirst());
+			return allowed.getFirst();
 		}
 		return mode;
 	}
